# go-cbor2cbor

./: .gitignore  README.md  cbor2cbor.go  go.mod  go.sum
any2writer/: a2w.go
any2writer/amacker/: any2cbor.go
arr2arr/: arr2arr.go  input.go  output.go
arr2arr/arr2wasm2arr/: wsrc.go
arr2arr/arr2wasm2arr/fs/: stdfs.go
arr2arr/arr2wasm2arr/wazero/: arr2w0.go  compiled.go  config.go  input.go  output.go  result.go  runtime.go
arr2cbor/: arr2cbor.go
arr2cbor/amacker/: arr2cbor.go
cbor2arr/: cbor2arr.go
cbor2arr/amacker/: cbor2array.go
cbor2arr2mapd2cbor/: cbor2arr2mapd2cbor.go
cbor2primitive/: c2b.go  c2d.go  c2f.go  c2i.go  c2p.go  c2p_test.go  c2s.go  c2t.go  c2u.go  c2uuid.go
cmd/arr2arr/wasm/wazero/cbor2wasm2cbor/: main.go  run.sh
cmd/arr2arr/wasm/wazero/cbor2wasm2cbor/modules.d/copy/rs-serialized-parsed/: Cargo.toml  README.md  rs_serialized_parsed.wasm
cmd/arr2arr/wasm/wazero/cbor2wasm2cbor/modules.d/copy/rs-serialized-parsed/src/: lib.rs
cmd/bytes2primitive/: README.md  main.go
cmd/primitive2primitive/wasm/wazero/: simple
conv/: converter.go
iter/: zip.go
iter/arr2cbor/: arr2cbor.go
iter/arr2cbor/amacker/: arr2cbor.go
iter/cbor2arr/amacker/: cbor2iter.go
primitive2primitive/: prim2prim.go
primitive2primitive/wasm/: prim2prim.go
primitive2primitive/wasm/typed/: a2f.go  a2i.go  typed.go
primitive2primitive/wasm/typed/unary/wazero/: dec.go  (+3 more)
primitive2primitive/wasm/wazero/: prim2prim.go
reader2bytestrings/: rdr2bs.go
reader2bytestrings/amacker/: r2b.go  r2b_test.go
reader2primitives/: r2p.go
util/: compose.go
(+30 files in other folders)
