[package]
name = "rs-serialized-parsed"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
	"cdylib",
]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.ciborium]
version = "0.2.2"
default-features = false
features = [
]

[dependencies.ciborium-io]
version = "0.2.2"
default-features = false
features = [
	"alloc",
]
